# Lucile

./: .gitignore  flake.nix  pyproject.toml
src/Lucile_bigshaq9999/: ElanMtJaEnTranslator.py  main.py
