[build-system]
requires      = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Lucile_bigshaq9999"
version = "0.0.9"
authors = [{ name = "bigshaq9999", email = "" }]
description = "A manga translate annotation app"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "accelerate==1.12.0",
  "manga-ocr==0.1.14",
  "numpy==2.2.6",
  "opencv-python==4.12.0.88",
  "pyside6==6.10.1",
  "sacremoses==0.1.1",
  "sentencepiece==0.2.1",
  "transformers==4.37.2",
  "ultralytics==8.3.249",
]

[tool.hatch.build.targets.wheel]
packages = ["src/Lucile_bigshaq9999"]

[project.scripts]
lucile = "Lucile_bigshaq9999.main:main"
